# srrg2_proslam

./: .gitignore  README.md
srrg2_proslam/: CMakeLists.txt  package.xml  readme.md
srrg2_proslam/apps/: CMakeLists.txt  app_benchmark.cpp  compute_sparse_stereo_gt.cpp  convert_rgbd_to_srrg2.cpp  convert_stereo_to_srrg2.cpp  example_feature_extractor.cpp  example_feature_matcher.cpp  example_projective_search_patterns.cpp  example_slam_3d.cpp  example_stereo_projective_tracking.cpp  example_triangulate_rigid_stereo.cpp  example_unproject_rgbd.cpp
srrg2_proslam/benchmarks/: CMakeLists.txt  benchmark_euroc.cpp  benchmark_icl.cpp  benchmark_kitti.cpp  benchmark_malaga.cpp  benchmark_tum.cpp
srrg2_proslam/src/: CMakeLists.txt
srrg2_proslam/src/srrg2_proslam/mapping/: CMakeLists.txt  instances.cpp  instances.h  scene_clipper_projective_3d.cpp  scene_clipper_projective_3d.h  triangulator_rigid_stereo.cpp  triangulator_rigid_stereo.h
srrg2_proslam/src/srrg2_proslam/mapping/landmarks/: landmark_estimator_base.hpp  landmark_estimator_ekf.h  landmark_estimator_ekf_impl.cpp  landmark_estimator_pose_based_smoother.h  landmark_estimator_pose_based_smoother_impl.cpp  landmark_estimator_weighted_mean.h  landmark_estimator_weighted_mean_impl.cpp
srrg2_proslam/src/srrg2_proslam/mapping/mergers/: merger_correspondence_projective_depth_3d.cpp  merger_correspondence_projective_depth_3d.h  merger_projective.h  merger_projective_depth_ekf.h  merger_projective_depth_ekf_impl.cpp  merger_projective_impl.cpp  merger_projective_rigid_stereo.h  merger_projective_rigid_stereo_ekf.h  merger_projective_rigid_stereo_ekf_impl.cpp  merger_projective_rigid_stereo_impl.cpp  merger_projective_rigid_stereo_triangulation_impl.cpp
srrg2_proslam/src/srrg2_proslam/registration/: CMakeLists.txt  aligner_slice_processor_2d.hpp  aligner_slice_processor_3d.hpp  aligner_slice_processor_hbst.h  aligner_slice_processor_projective.cpp  aligner_slice_processor_projective.h  instances.cpp  instances.h  local_map_selector_hbst.h
srrg2_proslam/src/srrg2_proslam/registration/correspondence_finders/: correspondence_finder_descriptor_based_bruteforce.h  correspondence_finder_descriptor_based_epipolar.h  (+14 more)
srrg2_proslam/src/srrg2_proslam/sensor_processing/: CMakeLists.txt  instances.cpp  instances.h  raw_data_preprocessor_descriptor_based.hpp  raw_data_preprocessor_monocular_depth.cpp  raw_data_preprocessor_monocular_depth.h  raw_data_preprocessor_stereo_projective.cpp  raw_data_preprocessor_stereo_projective.h
srrg2_proslam/src/srrg2_proslam/tracking/: CMakeLists.txt  instances.cpp  instances.h  multi_tracker_3dqr.h  tracker_slice_processor_projective_depth.cpp  tracker_slice_processor_projective_depth.hpp  tracker_slice_processor_stereo_projective.hpp
srrg2_proslam/src/srrg2_proslam_adaptation/: CMakeLists.txt  instances.cpp  instances.h  intensity_feature_extractor_base.cpp  intensity_feature_extractor_base.h  intensity_feature_extractor_binned.cpp  intensity_feature_extractor_binned.h  intensity_feature_extractor_selective.cpp  intensity_feature_extractor_selective.h  measurement_adaptor_descriptor_based.hpp  measurement_adaptor_monocular_depth.cpp  measurement_adaptor_monocular_depth.h  measurement_adaptor_stereo_projective.cpp  measurement_adaptor_stereo_projective.h
srrg2_proslam/src/srrg2_proslam_adaptation/correspondence_finders/: correspondence_finder_descriptor_based_bruteforce.h  correspondence_finder_descriptor_based_bruteforce_impl.cpp  correspondence_finder_descriptor_based_epipolar.h  correspondence_finder_descriptor_based_epipolar_impl.cpp  correspondence_finder_projective_base.h  correspondence_finder_projective_base_impl.cpp  correspondence_finder_projective_circle.h  correspondence_finder_projective_circle_impl.cpp  correspondence_finder_projective_kdtree.h  correspondence_finder_projective_kdtree_impl.cpp  correspondence_finder_projective_rhombus.h  correspondence_finder_projective_rhombus_impl.cpp  correspondence_finder_projective_square.h  correspondence_finder_projective_square_impl.cpp
srrg2_proslam/src/srrg2_proslam_localization/: CMakeLists.txt  aligner_slice_2d.hpp  aligner_slice_3d.hpp  aligner_slice_projective.cpp  aligner_slice_projective.h  instances.cpp  instances.h
srrg2_proslam/src/srrg2_proslam_mapping/: CMakeLists.txt  instances.cpp  instances.h  scene_clipper_projective_3d.cpp  scene_clipper_projective_3d.h  triangulator_rigid_stereo.cpp  triangulator_rigid_stereo.h
srrg2_proslam/src/srrg2_proslam_mapping/landmarks/: landmark_estimator_base.hpp  landmark_estimator_ekf.h  landmark_estimator_ekf_impl.cpp  landmark_estimator_pose_based_smoother.h  landmark_estimator_pose_based_smoother_impl.cpp  landmark_estimator_weighted_mean.h  landmark_estimator_weighted_mean_impl.cpp
srrg2_proslam/src/srrg2_proslam_mapping/mergers/: merger_correspondence_projective_depth_3d.cpp  merger_correspondence_projective_depth_3d.h  merger_projective.h  merger_projective_depth_ekf.h  merger_projective_depth_ekf_impl.cpp  merger_projective_impl.cpp  merger_projective_rigid_stereo.h  merger_projective_rigid_stereo_ekf.h  merger_projective_rigid_stereo_ekf_impl.cpp  merger_projective_rigid_stereo_impl.cpp  merger_projective_rigid_stereo_triangulation.h  merger_projective_rigid_stereo_triangulation_impl.cpp
srrg2_proslam/src/srrg2_proslam_tracking/: CMakeLists.txt  instances.cpp  instances.h  multi_tracker_3dqr.h  tracker_slice_projective_depth.cpp  tracker_slice_projective_depth.hpp  tracker_slice_stereo_projective.hpp
srrg2_proslam/tests/: CMakeLists.txt  fixtures.hpp  test_aligners.cpp  test_correspondence_finders.cpp  test_feature_extractors.cpp  test_landmark_estimators.cpp  test_loop_closing.cpp  test_measurement_adaptors.cpp  test_mergers.cpp  test_place_recognition.cpp  test_projective_depth_point_ekf.cpp  test_projective_point_ekf.cpp  test_scene_clippers.cpp  test_stereo_projective_point_ekf.cpp  test_trackers.cpp
srrg2_proslam_ros/: CMakeLists.txt  package.xml
srrg2_proslam_ros/src/: CMakeLists.txt
srrg2_proslam_ros/src/tests/: CMakeLists.txt  test_unproject_rigid_stereo_node.cpp
(+28 files in other folders)
