add_library(srrg2_proslam_adaptation_library SHARED
  intensity_feature_extractor_base.cpp
  intensity_feature_extractor_binned.cpp
  intensity_feature_extractor_selective.cpp
  correspondence_finders/correspondence_finder_descriptor_based_bruteforce_impl.cpp
  correspondence_finders/correspondence_finder_descriptor_based_epipolar_impl.cpp
  correspondence_finders/correspondence_finder_projective_base_impl.cpp
  correspondence_finders/correspondence_finder_projective_kdtree_impl.cpp
  correspondence_finders/correspondence_finder_projective_square_impl.cpp
  correspondence_finders/correspondence_finder_projective_circle_impl.cpp
  correspondence_finders/correspondence_finder_projective_rhombus_impl.cpp
  measurement_adaptor_stereo_projective.cpp
  measurement_adaptor_monocular_depth.cpp
  instances.cpp
)

target_link_libraries(srrg2_proslam_adaptation_library
  ${catkin_LIBRARIES}
  ${OpenCV_LIBS}
)
